backend/err.txt
file:///C:/Users/ASUS/OneDrive%20-%20Informatics%20Institute%20of%20Technology/Desktop/Vibey/backend/src/routes/auth.js:2
import { requireAuth } from '../middleware/auth.js';
         ^^^^^^^^^^^
SyntaxError: The requested module '../middleware/auth.js' does not provide an export named 'requireAuth'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:661:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.13.1
